--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(OpenSampler VERSION 1.0.0)
 
-# JUCE requires C++14 or higher
-set(CMAKE_CXX_STANDARD 14)
+# Specify the C++ standard
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Define build options to match the Projucer configuration
